# public/swagger.yml
@@ -159,15 +159,9 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/Recipe"
-  "/grocerylist/{grocerylist-key}/add-recipe/{recipe-key}":
+  "/grocerylist/{grocerylist-key}/add-recipes":
     post:
       parameters:
-      - in: path
-        name: grocerylist-key
-        schema:
-          type: integer
-        required: true
-        description: Numeric key of the grocery list to use
       - in: path
         name: recipe-key
         schema:
@@ -175,7 +169,7 @@ paths:
         required: true
         description: Numeric key of the recipe to use
       tags:
-      - add-recipe-to-list
+      - add-recipes-to-list
       responses:
         '200':
           description: A recipe was added to grocery list
