# routes/api.php
@@ -36,7 +36,7 @@ Route::group([
     Route::patch('grocery-list-item/{groceryListItem}', 'GroceryListItemController@update');
     Route::post('grocery-list-item-completion/{groceryListItem}', 'GroceryListItemCompletionController@store');
 
-    Route::post('grocerylist/{grocerylist}/add-recipe/{recipe}', 'AddRecipeToGrocerylistController@store');
+    Route::post('grocerylist/{grocerylist}/add-recipes', 'AddRecipeToGrocerylistController@store');
 
     Route::post('recipe/{recipe}/add-ingredients', 'IngredientController@store');
     Route::delete('ingredients/{ingredient}', 'IngredientController@delete');
